updated api documentation with return values
